# Esp-12-tracker

./: .gitignore  Makefile  README.md  host_bin.py  partitions.csv  sdkconfig  sdkconfig.old
components/I2C/: I2C.c  I2C.h
components/NEO_6M_driver/: NEO_6M.c  NEO_6M.h
components/OTA/: OTA.c  OTA.h
components/SPI/: SPI.c  SPI.h
components/UART/: UART.c  UART.h
components/WiFi/: WiFi.c  WiFi.h
components/debugging/: my_print.c  my_print.h
components/my_config/: my_config.h
components/my_spiffs/: my_spiffs.c  my_spiffs.h  spiffs_config.h
components/sim800L_driver/: sim800L_driver.c  sim800L_driver.h
components/web/: web.c  web.h
ltspice sim/: 10vBooster.asc  lt3757_boost_converter.asc  tracker.asc
main/: component.mk  main.c
test/: CMakeLists.txt  main_test.c  mocks_fakes.h  unity.c
test/SPI/: SPI_test.c  SPI_test.h
test/UART/: UART_tests.c  UART_tests.h
test/debugging/: my_print_test.c  my_print_test.h
